# opensafer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/opensafer/: __init__.py  open_dir_safer.py  open_safer.py  state.py
test/: test_open_dir_safer.py  test_open_safer.py
